--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,13 +1,12 @@
 name: RotatingShop
 version: 1.0
 main: me.jakepronger.rotatingshop.RotatingShop
-description: RotatingShop plugin for Mason
+description: RotatingShop plugin for HeartbeatMC
 api-version: 1.20
 depend: [PlayerPoints]
-softdepend: [PlotSquared]
 author: jakepronger
 commands:
   blackmarket:
     aliases: bm
     permission: blackmarket
-    description: something # Teleport to a homemade by the user.
+    description: something
