--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -37,6 +37,7 @@ shop:
       slots: 1,3,5,7,9,11,13,15,17,19,21,23,25
     BLACK_STAINED_GLASS_PANE:
       name: " "
+      glowing: true # todo: test
       slots: 0,2,4,6,8,10,12,14,16,18,20,22,24,26
     WRITABLE_BOOK:
       name: "&#FF0000ᴛɪᴍᴇ ʟᴇꜰᴛ: %time-left%"
