--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,10 +1,10 @@
 permissions:
-  blackmarket: rs.blackmarket
+  black-market:
+    require: true
+    node: rs.blackmarket
   reload: rs.reload
   editor: rs.editor
-  no-permission:
-    use: true
-    message: "&cNo permissions!"
+  no-perm: "&cNo permissions!"
 
 purchase:
   succeeded:
@@ -49,7 +49,7 @@ shop:
       glowing: true
       lore:
         - "&b%time-left%" # todo: variable updates per second?
-      type: WRITEABLE_BOOK
+      type: WRITABLE_BOOK
     18:
       name: "&#FF005Dɪ&#F8006Fᴛ&#F10081ᴇ&#E90093ᴍ&#E200A5ꜱ &#D400C9ʟ&#CC00DBɪ&#C500EDꜱ&#BE00FFᴛ"
       type: BARRIER
