--- a/src/main/resources/data.yml
+++ b/src/main/resources/data.yml
@@ -1,10 +1,10 @@
-time: # server uptime tracker
-  uptime: 329 # overall uptime in minutes
-  server:
-    last-startup:
-    last-shutdown:
-  uptime-updater:
-    use: true # uptime is updated every specified minutes in-case of server crash
-    time: 5 # minutes
+time:
+  uptime: 329 # tracks current rotation time in minutes (resets every rotation)
+  uptime-updater: # update uptime every specified minutes in-case of an in proper server shutdown (crash)
+    use: true
+    minutes: 5
+
+# todo: update these id's if an item is removed
+rotation: 1,3,5
 
 items:
