--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -35,7 +35,7 @@ purchase:
 # open: item.gui, shop.gui (path to gui config section) or 'next' or 'back' for pages?
 shop:
   items: # purchasable items format (%name%, %lore%, %price%, %formatted-price%)
-    rotation: 360 # in minutes
+    rotation: 300 # in minutes
     slots: 12,13,14 # Slots to display purchasable items
     format:
       name: "%name%"
@@ -73,7 +73,7 @@ shop:
         open: editor.gui
         type: BARRIER
 
-items:
+editor:
   items: # purchasable item format (%name%, %lore%, %price%, %formatted-price%)
     slots: 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44
     format:
